--- a/WebContent/css/userManage.css
+++ b/WebContent/css/userManage.css
@@ -8,10 +8,22 @@ h3 {
     text-align: center;
 }
 
+h4 {
+    color: #ffffff;
+    background-color: #B3C8CF;
+    text-align: center;
+    padding: 30px 80px 30px 80px;
+    margin-top: -54.8px;
+    margin-left: -40px;
+    margin-right: -8%;
+    border: #B3C8CF;
+    border-radius: 20px 20px 0 0;
+}
+
 .table {
     background-color: #ffffff;
     margin: 0px 100px 500px 400px;
-    padding: 10px 62px 50px 63.5px ;
+    padding: 10px 61px 50px 63.5px ;
 }
 
 .table  a {
@@ -21,7 +33,7 @@ h3 {
 }
 
 label {
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin: 0 30px 0 30px;
 }
 
@@ -35,6 +47,20 @@ label {
 
 .icon {
     display: flex;
+    align-items: center; /* 中央に配置 */
+    gap: 8px;
+}
+
+.delete-button {
+	position: relative;
+    bottom: 70px;
+    border: 1px solid black;
+    margin: 0px 30px 10px 400px;
+    padding: 5px;
+    background-color: #ffffff;
+    display: flex; /* 複数の要素を横に並べるため */
+    align-items: center;
+    border-radius: 10px; /*四角の角を丸くする*/
     align-items: center; /* 中央に配置 */
     gap: 8px;
 }
@@ -116,4 +142,78 @@ input[name="delete1"] {
     background-color: #35AFDB;
     font-size: 1.2em;
     border-radius: 20px; /*ログインボタンの角を丸くする*/
+}
+
+/* アラートボックス */
+
+@keyframes showAlertAnimation {
+    0% {
+        transform: translate(-50%, -50%) scale(0.7); /* 最初は小さく */
+        opacity: 0;
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1); /* 最終的に通常サイズに */
+        opacity: 1;
+    }
+}
+
+
+.confirmBox, .alertBox, .confirmBox_delete{
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+	height: 300px;
+	width: 500px;
+    padding: 55px 40px 40px 40px;
+    background-color: white;
+    /*border: 3px solid #545454;*/
+	border-radius: 5%;
+    z-index: 1000;
+	color: #545454;
+    animation: showAlertAnimation 0.3s ease forwards; /* アニメーションの適用 */
+}
+
+.confirmBox p{
+	font-size: 1.2em;
+	padding: 80px 10px 10px 100px;
+    color: #545454;
+}
+
+.alertBox p{
+    font-size: 1.2em;
+	padding: 80px 10px 10px 70px;
+    color: #545454;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.button {
+    color: #ffffff;
+    padding: 20px 50px;
+    margin: 70px 10px 10px 175px;
+    border-radius: 20px; /*ログインボタンの角を丸くする*/
+    background-color: #35AFDB;
+}
+
+.button1 {
+    color: #ffffff;
+    padding: 20px 50px;
+    margin: 70px 10px 10px 80px;
+    border-radius: 20px; /*ログインボタンの角を丸くする*/
+    background-color: #35AFDB;
+}
+
+.aa {
+    display: flex;
 }
