--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -37,7 +37,7 @@ label {
     margin: 0 30px 0 150px;
 }
 
-input[name=id], input[name=pass]{
+input[name=mail], input[name=pass]{
     border: 1px solid #ccc;
     height: 3em;
     width: 38em;
