--- a/WebContent/css/userManage.css
+++ b/WebContent/css/userManage.css
@@ -3,7 +3,7 @@
 h3 {
     color: #ffffff;
     background-color: #B3C8CF;
-    margin: 60px 400px 0px 400px;
+    margin: 60px 500px 0px 500px;
     padding: 10px 0 10px 0 ;
     text-align: center;
 }
@@ -22,19 +22,19 @@ h4 {
 
 .table {
     background-color: #ffffff;
-    margin: 0px 100px 500px 400px;
-    padding: 10px 61px 50px 63.5px ;
+    margin: 0px 200px 500px 500px;
+    padding: 10px 153px 50px 153px ;
 }
 
 .table  a {
-    margin: 0 30px 0 30px;
+    margin: 0 30px 0 10px;
     color: #696969;
     text-decoration: none;
 }
 
 label {
-    font-size: 1.5em;
-    margin: 0 30px 0 30px;
+    font-size: 1.2em;
+    margin: 20px 30px 0 10px;
 }
 
 .required {
@@ -42,7 +42,7 @@ label {
 }
 
 .login {
-    margin: 10px 40px 0px 30px;
+    margin: 10px 40px 0px 10px;
 }
 
 .icon {
@@ -55,7 +55,7 @@ label {
 	position: relative;
     bottom: 70px;
     border: 1px solid black;
-    margin: 0px 30px 10px 400px;
+    margin: 0px 30px 10px 360px;
     padding: 5px;
     background-color: #ffffff;
     display: flex; /* 複数の要素を横に並べるため */
@@ -69,7 +69,7 @@ input[name=id], input[name=pass], input[name=name] {
     border: 1px solid #ccc;
     height: 3em;
     width: 38em;
-    margin: 10px 30px;
+    margin: 10px 30px 0 10px;
     background-color: #dcdcdc;
 }
 
@@ -88,7 +88,7 @@ input[name=my_introduction] {
     border: 1px solid #ccc;
     height: 10em;
     width: 38em;
-    margin: 10px 30px;
+    margin: 10px 30px 0 10px;
     background-color: #dcdcdc;
     border-radius: 10px; /*四角の角を丸くする*/
 }
